@@ -11,4 +11,6 @@ with contributions by:
     Michael Smith, <msmith@labyrinth.net.au>
     Julius O. Smith, <jos@ccrma.stanford.edu>
     the OSALP team, http://osalp.sourceforge.net
+    Kristjan G. Bjarnason <kgb@gangverk.is>
+    Nicu Pavel <npavel@ituner.com>
 
